--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -18,6 +18,7 @@
   -->
 
 <resources>
+	
 	<!-- CAMERA PERMISSIONS -->
 	<string name="permission_camera_explanation">Приложению необходим доступ к Камере, чтобы сделать снимок. Разрешить?</string>
 	<string name="permission_camera_denied">Пожалуйста, разрешите приложению доступ к Камере. Перейдите \nНастройки -> Приложения -> Разрешения</string>
@@ -25,28 +26,41 @@
 	<!-- GALLERY PERMISSIONS -->
 	<string name="permission_read_ext_storage_explanation">Приложению необходим доступ к Хранилищу, чтобы выбрать фото из галлереи. Разрешить?</string>
 	<string name="permission_read_ext_storage_denied">Пожалуйста, разрешите приложению доступ к Хранилищу. Перейдите \nНастройки -> Приложения -> Разрешения</string>
-
-	<!--Layouts hardcoded strings-->
+	
+	<!-- Location PERMISSIONS -->
+	<string name="permission_location_explanation">Приложению необходим доступ к Геолокации, чтобы получить вашу локацию. Разрешить?</string>
+	<string name="permission_location_denied">Пожалуйста, разрешите приложению доступ к Геолокации. Перейдите \nНастройки -> Приложения -> Разрешения</string>
+	
+	<!-- activity_main -->
+	<string name="dialog_location_disabled_title">Нет доступа к геопозиции…</string>
+	<string name="dialog_location_disabled_message">На телефоне включено определение местоположения?</string>
+	<string name="dialog_location_btn_pos">Открыть настройки</string>
+	<string name="dialog_location_btn_neg">Отмена</string>
+	
+	<!-- fragment_auth -->
 	<string name="auth_slogan1">Найди новых\nдрузей</string>
 	<string name="btn_log_in_with_facebook">Войти через Facebook</string>
-
+	
+	<!-- fragment_registration -->
 	<string name="reg_step_1_tv_select_your_gender">Выбери свой пол</string>
 	<string name="reg_step_3_tv_specify_your_age">Укажи свой возраст</string>
 	<string name="reg_step_4_tv_change_name">Как тебя зовут?</string>
 	<string name="reg_step_final_tv_check_is_correct">Проверь все ли правильно</string>
-
-	<!-- partner preferences -->
-	<string name="tv_gender_showing">Тебя интересуют</string>
-	<string name="tv_ages_you_prefer">Возраст партнера</string>
 	
-	<string name="hint_name">Имя</string>
-	<string name="hint_gender">Пол</string>
-	<string name="hint_preferred_gender">Предпочтения</string>
-	<string name="hint_age">Возраст</string>
-	<string name="default_age_text">18</string>
+	<string name="reg_hint_name">Имя</string>
+	<string name="reg_hint_gender">Пол</string>
+	<string name="reg_hint_preferred_gender">Предпочтения</string>
+	<string name="reg_hint_age">Возраст</string>
+	<string name="reg_default_age_text">18</string>
 	<string name="reg_btn_back_text">Назад</string>
-	<string name="btn_done_text">Готово</string>
-
+	<string name="reg_btn_done_text">Готово</string>
+	
+	<!-- fragment_main_flow -->
+	<string name="bottom_navigation_cards">Люди</string>
+	<string name="bottom_navigation_pairs">Пары</string>
+	<string name="bottom_navigation_chats">Чаты</string>
+	<string name="bottom_navigation_settings">Опции</string>
+	
 	<!-- Fragment cards strings -->
 	<string name="fragment_cards_explanation_text">К сожалению, мы не нашли пользователей по твоим предпочтениям</string>
 	<string name="fragment_card_skip_img_description">пропустить карточку</string>
@@ -54,23 +68,43 @@
 	<string name="tv_its_a_match">ВОУ ВОУ ВОУ!\nВы образовали пару!</string>
 	<string name="tv_back_to_swiping">Назад к свайпингу</string>
 
-	<!-- Fragment chat strings -->
+	<!-- fragment_chat -->
 	<string name="fragment_chat_ed_hint">Cообщение</string>
+	<string name="fragment_chat_no_messages_explanation">Нет сообщений</string>
+	
 	<string name="fragment_chat_send_img_description">отправить сообщение</string>
 	<string name="fragment_chat_attach_img_description">прикрепить фоточку</string>
 	<string name="chat_message_sender_avatar_img_description">аватар отправителя</string>
 	<string name="chat_message_sender_attach_img_description">прикрепленное фото от отправителя</string>
 	<string name="chat_message_my_avatar_img_description">мой аватар</string>
 	<string name="chat_message_my_attach_img_description">мое прикрепленное фото</string>
-	<string name="chat_no_messages_explanation">Нет сообщений</string>
 
+	
 	<string name="fragment_conversations_explanation_text">Нет активных диалогов…\n\nСкорее, напиши кому-нибудь!</string>
+	<string name="dialog_conversation_delete_title">Удалить диалог?</string>
+	<string name="dialog_conversation_delete_message">Это полностью удалит переписку и пару с пользователем.</string>
+	
 	<string name="fragment_pairs_explanation_text">Пока ещё нет взаимных симпатий…\n\nПродолжай свайпать!</string>
-	<string name="fragment_places_explanation">Не найдено мест в этой категории</string>
 
+	
 	<string name="description_user_photo">фото пользователя</string>
 	
+	
+	<!-- fragment_settings -->
 	<string name="fragment_settings_age_formatter">Возраст: %s</string>
+	<string name="btn_settings_edit_delete_my_account_text">УДАЛИТЬ МОЙ ПРОФИЛЬ</string>
+	<string name="btn_settings_edit_save_text">Сохранить</string>
+	
+	<string name="menu_exit">Выйти</string>
+	<string name="menu_dating_preferences">Твои предпочтения</string>
+	<string name="dialog_profile_delete_title">Ты действительно хочешь удалить свой профиль?</string>
+	<string name="dialog_profile_delete_message">Это польностью удалит всю информацию о твоем профиле, а так же все пары и диалоги.</string>
+	<string name="dialog_delete_btn_positive_text">Удалить</string>
+	<string name="dialog_delete_btn_negative_text">Отмена</string>
+	<string name="dialog_exit_title">Ты действительно хочешь выйти?</string>
+	<string name="dialog_exit_message">Моментально покинуть приложение.</string>
+	<string name="dialog_exit_positive_btn_text">Выйти</string>
+	<string name="dialog_exit_negative_btn_text">Отмена</string>
 
 	<!-- pref genders-->
 	<string name="preferredGenderFemale">Девушки</string>
@@ -80,50 +114,35 @@
 	<!-- my gender -->
 	<string name="genderFemale">Девушка</string>
 	<string name="genderMale">Парень</string>
+	
+	<string name="tv_gender_showing">Тебя интересуют</string>
+	<string name="tv_ages_you_prefer">Возраст партнера</string>
 
-	<string name="btn_settings_edit_delete_my_account_text">УДАЛИТЬ МОЙ ПРОФИЛЬ</string>
-	<string name="btn_settings_edit_save_text">Сохранить</string>
+	
 	<string name="dialog_error_title">Ошибка</string>
 
-	<string name="place_description_header_text">Описание</string>
 	<string name="profile_about_header_text">Обо мне</string>
 
 	<string name="text_empty_error">Поле должно быть заполнено</string>
-
-	<string name="toast_text_report_success">Жалоба успешно отправлена\nСпасибо тебе!</string>
+	
 	<string name="toast_text_update_success">Изменения сохранены</string>
 	<string name="toast_text_delete_success">Удалено</string>
+	<string name="toast_text_at_least_1_photo_required">Хотя бы 1 фотка должна быть</string>
 
-	<string name="bottom_navigation_cards">Люди</string>
-	<string name="bottom_navigation_pairs">Пары</string>
-	<string name="bottom_navigation_chats">Чаты</string>
-	<string name="bottom_navigation_settings">Опции</string>
-
-	<string name="dialog_conversation_delete_title">Удалить диалог?</string>
-	<string name="dialog_conversation_delete_message">Это полностью удалит переписку и пару с пользователем.</string>
-
-	<string name="dialog_profile_delete_title">Ты действительно хочешь удалить свой профиль?</string>
-	<string name="dialog_profile_delete_message">Это польностью удалит всю информацию о твоем профиле, а так же все пары и диалоги.</string>
-	<string name="dialog_delete_btn_positive_text">Удалить</string>
-	<string name="dialog_delete_btn_negative_text">Отмена</string>
-
-	<string name="dialog_exit_title">Ты действительно хочешь выйти?</string>
-	<string name="dialog_exit_message">Моментально покинуть приложение.</string>
-	<string name="dialog_exit_positive_btn_text">Выйти</string>
-	<string name="dialog_exit_negative_btn_text">Отмена</string>
-
-	<string name="menu_exit">Выйти</string>
-	<string name="menu_dating_preferences">Твои предпочтения</string>
+	
 	<string name="menu_unmatch_text">Удалить пару</string>
-	<string name="menu_report_text">Жалоба</string>
+	
 
 	<string name="material_dialog_picker_camera">Камера</string>
 	<string name="material_dialog_picker_gallery">Выбрать из галлереи</string>
-
+	
+	<string name="menu_report_text">Жалоба</string>
 	<string name="report_chooser_photos">Недопустимые фотографии</string>
 	<string name="report_chooser_behavior">Отвратительное поведение</string>
 	<string name="report_chooser_fake">Похоже на фейк</string>
+	<string name="toast_text_report_success">Жалоба успешно отправлена\nСпасибо тебе!</string>
+	
 	<string name="text_i_agree_privacy_policy">Нажимая эту кнопку \nВы соглашаетесь с <u>Политикой конфедециальности</u></string>
-	<string name="toast_text_at_least_1_photo_required">Хотя бы 1 фотка должна быть</string>
+	
 
 </resources>
